# reference

./: test_check.c
C/: 3_threads.2.c  3_threads.c  BUFSIZE.c  BitCut.c  EAGAIN.c  LockFileEx.c  MALLOC_CHECK_.c  RAND_bytes.c  ReverseBits.c  SRWLock.c  abort.c  access_time.c  af_alg.c  aio.c  alignment.c  antislash.c  argc.c  argc_argv.c  array.c  atoi.c  auth_krb5_ldap.c  auth_krb5_ldap_curl.c  backtrace.c  backtrace2.c  beep.c  benchmark.c  bitfield.c  bitshift.c  bus_error.c  char_int.c  client.c  clock.c  clone.c  computeCrc.c  const.c  constexpr.c  convert_ECDSA_SIG.c  creat.c  crypt.c  crypt_stream.c  (+184 more)
C++/: AesKeyWrap.cpp  CharStarVectorWrapper.cpp  Class1.cpp  Class1.hpp  Class1_A.hpp  GetPrivateProfileString.cpp  Makefile  MessageBox.cpp  PibDb.cpp  StringStream.cpp  Test1.cpp  any.cpp  appname.ini  argpx.cpp  async.cpp  at_cmd.cpp  atoi.cpp  auto.cpp  auto_ptr.cpp  bad_exception.cpp  bcd.cpp  boost.ini_parser.cpp  byte_buffer.cpp  catch.cpp  char.cpp  cin_read.cpp  class.cpp  class2.cpp  compare_string.cpp  condition_var.cpp  config.ini  const_char.cpp  constructor.cpp  constructor.mk  data_model.cpp  data_model.h  debug_stream.cpp  delete_throw.cpp  destructor.cpp  diff.cpp  (+85 more)
C/demo_autotools/: Makefile.am  configure.ac  notes.txt
C/demo_autotools/libzz/: Makefile.am  z.c  z.h
C/demo_autotools/x/: Makefile.am  x.c
C/demo_autotools/y/: Makefile.am  y.c
autotools/example-1/: README.md  configure.ac
autotools/example-1/src/: Makefile.am  config.h.in  example-1.c
meson/example1/: README.md  meson.build  meson.options
meson/example1/src/: config.h.in  example1.c  example1.h
(+178 files in other folders)
